# backend/src/modules/doubles-tournament/presentation/rest-api/request/PostTournamentStartRequestBody.ts
@@ -1,3 +1,0 @@
-export class PostTournamentStartRequestBody {
-  readonly tournamentId: string;
-}
